--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>LamirTech - Выбор языка</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>LamirTech</h1>
+        <p>Пожалуйста, выберите язык / Please select a language:</p>
+        <div class="language-select">
+            <a href="ru/about.html">Русский</a> | <a href="en/about.html">English</a>
+        </div>
+    </div>
+</body>
+</html>
