--- a/en/privacy.html
+++ b/en/privacy.html
@@ -8,9 +8,65 @@
 <body>
     <div class="container">
         <h1>Privacy Policy</h1>
-        <p>Here will be the text of your privacy policy in English.</p>
+        <p><strong>Effective Date:</strong> November 5, 2024</p>
+        <p>LamirTech (“we,” “us,” or “our”) built the Case app (the “Service”) as a free app. This Privacy Policy (“Policy”) outlines how we and any affiliated entities collect, use, and disclose personal information when you use our Service.</p>
+        <p>By using the Service and/or accepting this Policy, you or your legal representative (“User”) agree to the terms of this Policy.</p>
+
+        <h2>1. Information Collection and Use</h2>
+        <p>For a better experience while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to:</p>
+        <ul>
+            <li>Device Location: To enhance user experience and provide location-based services.</li>
+            <li>Unique Device Identifiers: For analytics, app functionality, and personalized content.</li>
+        </ul>
+        <p>The information we request will be retained by us and used as described in this Policy.</p>
+        <p>Third-Party Services Used:</p>
+        <ul>
+            <li>Google Play Services</li>
+            <li>Appodeal</li>
+            <li>AdMob</li>
+        </ul>
+        <p>Please refer to the privacy policies of these third-party service providers to understand how they handle your personal information.</p>
+
+        <h2>2. Data Sharing and Transfer</h2>
+        <p>By accepting this Policy, you confirm your consent to the transfer of your data to trusted affiliates and partners who assist us in providing the Service, under agreements guaranteeing data protection standards equal to or exceeding those set out in this Policy. These transfers occur only for essential operational purposes.</p>
+
+        <h2>3. Log Data</h2>
+        <p>We want to inform you that whenever you use our Service, in the event of an error in the app, we collect data and information (through third-party products) on your device called Log Data. This Log Data may include information such as your IP address, device name, operating system version, configuration of the app, time and date of use, and other statistics.</p>
+
+        <h2>4. Cookies</h2>
+        <p>Cookies are files with small amounts of data that are commonly used as anonymous unique identifiers. These are sent to your browser from websites you visit and are stored on your device’s internal memory. Our Service does not use these cookies explicitly, but third-party code may use cookies to collect information and improve services.</p>
+
+        <h2>5. Security Measures</h2>
+        <p>We value your trust in providing us your Personal Information, thus we strive to use commercially acceptable means of protecting it. However, remember that no method of transmission over the internet or electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</p>
+
+        <h2>6. Links to Other Sites</h2>
+        <p>Our Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites.</p>
+		
+		<h2>7. Children’s Privacy</h2>
+        <p>Our Service does not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. If we discover that a child under 13 has provided us with personal information, we will immediately delete this from our servers.</p>
+
+        <h2>8. User Rights</h2>
+        <p>Depending on your jurisdiction, you may have specific rights related to your personal data, including access, correction, deletion, restriction of processing, and data portability. For inquiries regarding these rights, contact us at <a href="mailto:stardeveloper939@gmail.com">stardeveloper939@gmail.com</a>.</p>
+
+        <h2>9. Data Retention</h2>
+        <p>We retain your data for as long as necessary to fulfill the purposes outlined in this Policy, and generally no longer than two years after you cease using the Service, unless a longer retention period is required or permitted by law.</p>
+
+        <h2>10. Cross-Border Data Transfers</h2>
+        <p>Your information, including Personal Information, may be transferred to—and maintained on—computers located outside of your jurisdiction where data protection laws may differ. By consenting to this Policy and submitting such information, you agree to this transfer.</p>
+
+        <h2>11. Changes to This Privacy Policy</h2>
+        <p>We may update our Privacy Policy from time to time. You are advised to review this page periodically for any changes. Changes are effective immediately upon posting on this page.</p>
+
+        <h2>12. Contact Us</h2>
+        <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at:</p>
+        <p>Email: <a href="mailto:stardeveloper939@gmail.com">stardeveloper939@gmail.com</a></p>
+
+        <p>Thank you for using our Service!</p>
+        
         <nav>
-            <a href="about.html">About Us</a> | <a href="privacy.html">Privacy Policy</a> | <a href="../index.html">Select Language</a>
+            <a href="about.html">About Us</a> | 
+            <a href="privacy.html">Privacy Policy</a> | 
+            <a href="../index.html">Select Language</a>
         </nav>
     </div>
 </body>
