--- a/ru/about.html
+++ b/ru/about.html
@@ -8,10 +8,18 @@
 <body>
     <div class="container">
         <h1>О нас</h1>
-        <p>Мы делаем крутые приложения и хотим делиться ими со всем миром.</p>
-        <p>Мы дружная команда, объединённая страстью к инновациям и качеству.</p>
+        <p>Мы – LamirTech, IT-компания, специализирующаяся на разработке приложений для развлечений. Наша миссия – создавать уникальные цифровые продукты, которые увлекают, вдохновляют и приносят радость пользователям. Команда LamirTech объединяет опыт в технологиях и страсть к креативности, разрабатывая приложения, которые выделяются в индустрии и привлекают миллионы пользователей.</p>
+        <p>Мы постоянно ищем новые идеи и инновационные решения, чтобы каждое наше приложение становилось еще более увлекательным и доступным. Независимо от масштаба проекта, мы стремимся к высокому качеству, интересным решениям и положительным эмоциям для наших пользователей.</p>
+        <p>С LamirTech развлечение выходит на новый уровень!</p>
+
+        <h2>Для связи</h2>
+        <p>Телефон: +7 (707) 943-96-67 (Казахстан)<br>
+        Почта: <a href="mailto:stardeveloper939@gmail.com">stardeveloper939@gmail.com</a></p>
+
         <nav>
-            <a href="about.html">О нас</a> | <a href="privacy.html">Политика конфиденциальности</a> | <a href="../index.html">Выбор языка</a>
+            <a href="about.html">О нас</a> | 
+            <a href="privacy.html">Политика конфиденциальности</a> | 
+            <a href="../index.html">Выбор языка</a>
         </nav>
     </div>
 </body>
