--- a/ru/privacy.html
+++ b/ru/privacy.html
@@ -8,9 +8,65 @@
 <body>
     <div class="container">
         <h1>Политика конфиденциальности</h1>
-        <p>Здесь будет текст вашей политики конфиденциальности на русском языке.</p>
+        <p><strong>Дата вступления в силу:</strong> 5 ноября 2024 года</p>
+        <p>LamirTech («мы», «нас» или «наш») разработала приложение Case (далее — «Сервис») как бесплатное приложение. Настоящая Политика конфиденциальности («Политика») описывает, как мы и любые аффилированные лица собираем, используем и раскрываем персональную информацию при использовании вами нашего Сервиса.</p>
+        <p>Используя Сервис и/или принимая эту Политику, вы или ваш законный представитель («Пользователь») соглашаетесь с условиями данной Политики.</p>
+
+        <h2>1. Сбор и использование информации</h2>
+        <p>Для лучшего опыта использования нашего Сервиса мы можем попросить вас предоставить определенную персональную информацию, включая, но не ограничиваясь:</p>
+        <ul>
+            <li>Местоположение устройства: для улучшения пользовательского опыта и предоставления услуг на основе местоположения.</li>
+            <li>Уникальные идентификаторы устройства: для аналитики, функциональности приложения и персонализированного контента.</li>
+        </ul>
+        <p>Информация, которую мы запрашиваем, будет сохранена нами и использована, как описано в этой Политике.</p>
+        <p>Используемые сторонние сервисы включают:</p>
+        <ul>
+            <li>Google Play Services</li>
+            <li>Appodeal</li>
+            <li>AdMob</li>
+        </ul>
+        <p>Пожалуйста, ознакомьтесь с политиками конфиденциальности этих сторонних поставщиков услуг, чтобы понять, как они обрабатывают вашу персональную информацию.</p>
+
+        <h2>2. Передача и раскрытие данных</h2>
+        <p>Принимая эту Политику, вы подтверждаете свое согласие на передачу ваших данных надежным аффилированным лицам и партнерам, которые помогают нам в предоставлении Сервиса, в соответствии с соглашениями, гарантирующими стандарты защиты данных, равные или превышающие изложенные в этой Политике. Эти передачи осуществляются только для необходимых операционных целей.</p>
+
+        <h2>3. Данные журнала</h2>
+        <p>Мы хотим сообщить вам, что при использовании нашего Сервиса, в случае ошибки в приложении, мы собираем данные и информацию (через сторонние продукты) на вашем устройстве под названием «Данные журнала». Эти данные могут включать IP-адрес, название устройства, версию операционной системы и другую статистику.</p>
+
+        <h2>4. Файлы Cookie</h2>
+        <p>Cookie — это файлы с небольшим объемом данных, которые обычно используются как анонимные уникальные идентификаторы. Они отправляются в ваш браузер с посещаемых вами веб-сайтов и хранятся во внутренней памяти вашего устройства. Наш Сервис не использует эти файлы cookie явно, однако может использовать сторонний код, который собирает информацию с помощью cookie.</p>
+
+        <h2>5. Меры безопасности</h2>
+        <p>Мы ценим ваше доверие и стремимся использовать коммерчески приемлемые средства для защиты вашей персональной информации. Но помните, что ни один метод передачи по интернету или электронного хранения не является на 100% безопасным, и мы не можем гарантировать абсолютную безопасность.</p>
+
+        <h2>6. Ссылки на другие сайты</h2>
+        <p>Наш Сервис может содержать ссылки на другие сайты. Если вы перейдете по сторонней ссылке, вы будете перенаправлены на этот сайт. Обратите внимание, что эти внешние сайты не управляются нами. Поэтому мы настоятельно рекомендуем вам ознакомиться с политикой конфиденциальности этих веб-сайтов.</p>
+		
+		<h2>7. Конфиденциальность детей</h2>
+        <p>Наш Сервис не предназначен для лиц младше 13 лет. Мы сознательно не собираем персональные данные от детей младше 13 лет. Если мы обнаружим, что ребенок младше 13 лет предоставил нам персональную информацию, мы немедленно удалим ее с наших серверов.</p>
+
+        <h2>8. Права пользователей</h2>
+        <p>В зависимости от вашей юрисдикции, вы можете иметь определенные права, связанные с вашими персональными данными, включая доступ, исправление или удаление данных, ограничение обработки и переносимость данных. Для запроса на эти права, свяжитесь с нами по адресу stardeveloper939@gmail.com.</p>
+
+        <h2>9. Хранение данных</h2>
+        <p>Мы храним ваши данные столько времени, сколько необходимо для выполнения целей, изложенных в этой Политике, и, как правило, не более двух лет после того, как вы перестали использовать Сервис, если более длительный период хранения не требуется или не разрешен законом.</p>
+
+        <h2>10. Трансграничная передача данных</h2>
+        <p>Ваша информация, включая персональные данные, может быть передана и храниться на компьютерах, расположенных за пределами вашей юрисдикции. При согласии с этой Политикой и предоставлении такой информации вы соглашаетесь на такую передачу.</p>
+
+        <h2>11. Изменения в этой Политике конфиденциальности</h2>
+        <p>Мы можем время от времени обновлять нашу Политику конфиденциальности. Рекомендуем периодически просматривать эту страницу на предмет изменений. Изменения вступают в силу немедленно после их публикации на этой странице.</p>
+
+        <h2>12. Свяжитесь с нами</h2>
+        <p>Если у вас есть вопросы или предложения по поводу нашей Политики конфиденциальности, не стесняйтесь обращаться к нам по адресу:</p>
+        <p>Электронная почта: <a href="mailto:stardeveloper939@gmail.com">stardeveloper939@gmail.com</a></p>
+
+        <p>Спасибо за использование нашего Сервиса!</p>
+        
         <nav>
-            <a href="about.html">О нас</a> | <a href="privacy.html">Политика конфиденциальности</a> | <a href="../index.html">Выбор языка</a>
+            <a href="about.html">О нас</a> | 
+            <a href="privacy.html">Политика конфиденциальности</a> | 
+            <a href="../index.html">Выбор языка</a>
         </nav>
     </div>
 </body>
