--- a/en/about.html
+++ b/en/about.html
@@ -8,10 +8,18 @@
 <body>
     <div class="container">
         <h1>About Us</h1>
-        <p>We create awesome apps and want to share them with the world.</p>
-        <p>We are a friendly team united by a passion for innovation and quality.</p>
+        <p>We are LamirTech, an IT company specializing in creating entertainment applications. Our mission is to develop unique digital products that captivate, inspire, and bring joy to users. The LamirTech team combines technical expertise with a passion for creativity, designing apps that stand out in the industry and attract millions of users.</p>
+        <p>We are constantly exploring new ideas and innovative solutions to make each of our apps more engaging and accessible. Regardless of the project’s scale, we are committed to high quality, creative solutions, and delivering positive experiences for our users.</p>
+        <p>With LamirTech, entertainment reaches a whole new level!</p>
+
+        <h2>Contact Us</h2>
+        <p>Phone: +7 (707) 943-96-67 (Kazakhstan)<br>
+        Email: <a href="mailto:stardeveloper939@gmail.com">stardeveloper939@gmail.com</a></p>
+
         <nav>
-            <a href="about.html">About Us</a> | <a href="privacy.html">Privacy Policy</a> | <a href="../index.html">Select Language</a>
+            <a href="about.html">About Us</a> | 
+            <a href="privacy.html">Privacy Policy</a> | 
+            <a href="../index.html">Select Language</a>
         </nav>
     </div>
 </body>
