--- a/en/privacy.html
+++ b/en/privacy.html
@@ -65,9 +65,20 @@
         
         <nav>
             <a href="about.html">About Us</a> | 
-            <a href="privacy.html">Privacy Policy</a> | 
-            <a href="../index.html">Select Language</a>
+            <a href="../index.html">Return to main page</a>
         </nav>
     </div>
+	<script>
+        const cubesBackground = document.querySelector('.cubes-background');
+        function createCube() {
+            const cube = document.createElement('div');
+            cube.classList.add('cube');
+            cube.style.left = Math.random() * 100 + 'vw';
+            cube.style.animationDuration = Math.random() * 5 + 3 + 's';
+            cubesBackground.appendChild(cube);
+            cube.addEventListener('animationend', () => cube.remove());
+        }
+        setInterval(createCube, 300);
+    </script>
 </body>
 </html>
