--- a/en/privacy.html
+++ b/en/privacy.html
@@ -9,8 +9,8 @@
     <div class="container">
         <h1>Privacy Policy</h1>
         <p><strong>Effective Date:</strong> November 5, 2024</p>
-        <p>LamirTech (“we,” “us,” or “our”) built the Case app (the “Service”) as a free app. This Privacy Policy (“Policy”) outlines how we and any affiliated entities collect, use, and disclose personal information when you use our Service.</p>
-        <p>By using the Service and/or accepting this Policy, you or your legal representative (“User”) agree to the terms of this Policy.</p>
+        <p>LamirTech (“we”) developed all of our apps (the “Service”) as free applications. This Privacy Policy (“Policy”) describes how we and our affiliated entities collect, use, and disclose personal information when you use our Service.</p>
+        <p>By using our Service and/or accepting this Policy, you or your legal representative (“User”) agree to the terms of this Policy.</p>
 
         <h2>1. Information Collection and Use</h2>
         <p>For a better experience while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to:</p>
