--- a/ru/privacy.html
+++ b/ru/privacy.html
@@ -9,7 +9,7 @@
     <div class="container">
         <h1>Политика конфиденциальности</h1>
         <p><strong>Дата вступления в силу:</strong> 5 ноября 2024 года</p>
-        <p>LamirTech («мы», «нас» или «наш») разработала приложение Case (далее — «Сервис») как бесплатное приложение. Настоящая Политика конфиденциальности («Политика») описывает, как мы и любые аффилированные лица собираем, используем и раскрываем персональную информацию при использовании вами нашего Сервиса.</p>
+        <p>LamirTech («мы») разработала все наши приложения (далее — «Сервис») как бесплатные приложения. Настоящая Политика конфиденциальности («Политика») описывает, как мы и наши аффилированные лица собираем, используем и раскрываем персональную информацию при использовании вами нашего Сервиса.</p>
         <p>Используя Сервис и/или принимая эту Политику, вы или ваш законный представитель («Пользователь») соглашаетесь с условиями данной Политики.</p>
 
         <h2>1. Сбор и использование информации</h2>
