--- a/en/about.html
+++ b/en/about.html
@@ -16,7 +16,7 @@
         
         <h2>Contact Us</h2>
         <p>Phone: +7 (707) 943-96-67 (Kazakhstan)<br>
-        Email: <a href="mailto:stardeveloper939@gmail.com">stardeveloper939@gmail.com</a></p>
+        Email: <a href="mailto:lamirtech@yandex.kz">lamirtech@yandex.kz</a></p>
         
         <nav>
             <a href="privacy.html">Privacy Policy</a> | <a href="../index.html">Return to main page</a>
