--- a/ru/about.html
+++ b/ru/about.html
@@ -18,7 +18,7 @@
         
         <h2>Для связи</h2>
         <p>Телефон: +7 (707) 943-96-67 (Казахстан)<br>
-        Почта: <a href="mailto:stardeveloper939@gmail.com">stardeveloper939@gmail.com</a></p>
+        Почта: <a href="mailto:lamirtech@yandex.kz">lamirtech@yandex.kz</a></p>
         
         <nav>
             <a href="privacy.html">Политика конфиденциальности</a> | <a href="../index.html">Вернуться на главную</a>
