--- a/ru/privacy.html
+++ b/ru/privacy.html
@@ -59,7 +59,7 @@
 
         <h2>12. Свяжитесь с нами</h2>
         <p>Если у вас есть вопросы или предложения по поводу нашей Политики конфиденциальности, не стесняйтесь обращаться к нам по адресу:</p>
-        <p>Электронная почта: <a href="mailto:stardeveloper939@gmail.com">stardeveloper939@gmail.com</a></p>
+        <p>Электронная почта: <a href="mailto:lamirtech@yandex.kz">lamirtech@yandex.kz</a></p>
 
         <p>Спасибо за использование нашего Сервиса!</p>
         
