--- a/en/privacy.html
+++ b/en/privacy.html
@@ -59,7 +59,7 @@
 
         <h2>12. Contact Us</h2>
         <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at:</p>
-        <p>Email: <a href="mailto:stardeveloper939@gmail.com">stardeveloper939@gmail.com</a></p>
+        <p>Email: <a href="mailto:lamirtech@yandex.kz">lamirtech@yandex.kz</a></p>
 
         <p>Thank you for using our Service!</p>
         
