--- a/en/privacy.html
+++ b/en/privacy.html
@@ -46,7 +46,7 @@
         <p>Our Service does not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. If we discover that a child under 13 has provided us with personal information, we will immediately delete this from our servers.</p>
 
         <h2>8. User Rights</h2>
-        <p>Depending on your jurisdiction, you may have specific rights related to your personal data, including access, correction, deletion, restriction of processing, and data portability. For inquiries regarding these rights, contact us at <a href="mailto:stardeveloper939@gmail.com">stardeveloper939@gmail.com</a>.</p>
+        <p>Depending on your jurisdiction, you may have specific rights related to your personal data, including access, correction, deletion, restriction of processing, and data portability. For inquiries regarding these rights, contact us at <a href="mailto:lamirtech@yandex.kz">lamirtech@yandex.kz</a>.</p>
 
         <h2>9. Data Retention</h2>
         <p>We retain your data for as long as necessary to fulfill the purposes outlined in this Policy, and generally no longer than two years after you cease using the Service, unless a longer retention period is required or permitted by law.</p>
