--- a/ru/privacy.html
+++ b/ru/privacy.html
@@ -46,7 +46,7 @@
         <p>Наш Сервис не предназначен для лиц младше 13 лет. Мы сознательно не собираем персональные данные от детей младше 13 лет. Если мы обнаружим, что ребенок младше 13 лет предоставил нам персональную информацию, мы немедленно удалим ее с наших серверов.</p>
 
         <h2>8. Права пользователей</h2>
-        <p>В зависимости от вашей юрисдикции, вы можете иметь определенные права, связанные с вашими персональными данными, включая доступ, исправление или удаление данных, ограничение обработки и переносимость данных. Для запроса на эти права, свяжитесь с нами по адресу stardeveloper939@gmail.com.</p>
+        <p>В зависимости от вашей юрисдикции, вы можете иметь определенные права, связанные с вашими персональными данными, включая доступ, исправление или удаление данных, ограничение обработки и переносимость данных. Для запроса на эти права, свяжитесь с нами по адресу <a href="mailto:lamirtech@yandex.kz">lamirtech@yandex.kz</a>.</p>
 
         <h2>9. Хранение данных</h2>
         <p>Мы храним ваши данные столько времени, сколько необходимо для выполнения целей, изложенных в этой Политике, и, как правило, не более двух лет после того, как вы перестали использовать Сервис, если более длительный период хранения не требуется или не разрешен законом.</p>
