some fixes of animation

--- a/en/about.html
+++ b/en/about.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,13 +9,13 @@
     <div class="cubes-background"></div>
     <div class="container">
         <h1>About Us</h1>
-        <p>We are LamirTech, an IT company specializing in creating entertainment applications. Our mission is to develop unique digital products that captivate, inspire, and bring joy to users. The LamirTech team combines technical expertise with a passion for creativity, designing apps that stand out in the industry and attract millions of users.</p>
+        <p>We are LamirTech, the development department of Vetprog LLC, specializing in creating entertainment applications for the international IT market. Our mission is to develop unique digital products that captivate, inspire, and bring joy to users.</p>
         <p>We are constantly exploring new ideas and innovative solutions to make each of our apps more engaging and accessible. Regardless of the project’s scale, we are committed to high quality, creative solutions, and delivering positive experiences for our users.</p>
         <p>With LamirTech, entertainment reaches a whole new level!</p>
         
         <h2>Contact Us</h2>
         <p>Phone: +7 (707) 943-96-67 (Kazakhstan)<br>
-        Email: <a href="mailto:lamirtech@yandex.kz">lamirtech@yandex.kz</a></p>
+        Email: <a href="mailto:lamirtech@yandex.kz">lamirtech@yandex.kz</a> or <a href="mailto:help@lamirtech.su">help@lamirtech.su</a></p>
         
         <nav>
             <a href="privacy.html">Privacy Policy</a> | <a href="../index.html">Return to main page</a>
