--- a/ru/privacy.html
+++ b/ru/privacy.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <!-- Анимационный фон с падающими кубами -->
+    <div class="cubes-background"></div>
+
     <div class="container">
         <h1>Политика конфиденциальности</h1>
         <p><strong>Дата вступления в силу:</strong> 5 ноября 2024 года</p>
-        <p>LamirTech («мы») разработала все наши приложения (далее — «Сервис») как бесплатные приложения. Настоящая Политика конфиденциальности («Политика») описывает, как мы и наши аффилированные лица собираем, используем и раскрываем персональную информацию при использовании вами нашего Сервиса.</p>
+        <p>LamirTech (департамент ООО “Ветпрог”) (далее — «мы») разработал все наши приложения (далее — «Сервис») как бесплатные приложения. Настоящая Политика конфиденциальности («Политика») описывает, как ООО "Ветпрог" и наши аффилированные лица собирают, используют и раскрывают персональную информацию при использовании вами нашего Сервиса.</p>
         <p>Используя Сервис и/или принимая эту Политику, вы или ваш законный представитель («Пользователь») соглашаетесь с условиями данной Политики.</p>
 
         <h2>1. Сбор и использование информации</h2>
@@ -24,6 +27,7 @@
             <li>Google Play Services</li>
             <li>Appodeal</li>
             <li>AdMob</li>
+            <li>Yandex ADS</li>
         </ul>
         <p>Пожалуйста, ознакомьтесь с политиками конфиденциальности этих сторонних поставщиков услуг, чтобы понять, как они обрабатывают вашу персональную информацию.</p>
 
@@ -46,7 +50,7 @@
         <p>Наш Сервис не предназначен для лиц младше 13 лет. Мы сознательно не собираем персональные данные от детей младше 13 лет. Если мы обнаружим, что ребенок младше 13 лет предоставил нам персональную информацию, мы немедленно удалим ее с наших серверов.</p>
 
         <h2>8. Права пользователей</h2>
-        <p>В зависимости от вашей юрисдикции, вы можете иметь определенные права, связанные с вашими персональными данными, включая доступ, исправление или удаление данных, ограничение обработки и переносимость данных. Для запроса на эти права, свяжитесь с нами по адресу <a href="mailto:lamirtech@yandex.kz">lamirtech@yandex.kz</a>.</p>
+        <p>В зависимости от вашей юрисдикции, вы можете иметь определенные права, связанные с вашими персональными данными, включая доступ, исправление или удаление данных, ограничение обработки и переносимость данных. Для запроса на эти права, свяжитесь с нами по адресу <a href="mailto:lamirtech@yandex.kz">lamirtech@yandex.kz</a> или <a href="mailto:help@lamirtech.su">help@lamirtech.su</a>.</p>
 
         <h2>9. Хранение данных</h2>
         <p>Мы храним ваши данные столько времени, сколько необходимо для выполнения целей, изложенных в этой Политике, и, как правило, не более двух лет после того, как вы перестали использовать Сервис, если более длительный период хранения не требуется или не разрешен законом.</p>
@@ -59,7 +63,7 @@
 
         <h2>12. Свяжитесь с нами</h2>
         <p>Если у вас есть вопросы или предложения по поводу нашей Политики конфиденциальности, не стесняйтесь обращаться к нам по адресу:</p>
-        <p>Электронная почта: <a href="mailto:lamirtech@yandex.kz">lamirtech@yandex.kz</a></p>
+        <p>Электронная почта: <a href="mailto:lamirtech@yandex.kz">lamirtech@yandex.kz</a> или <a href="mailto:help@lamirtech.su">help@lamirtech.su</a></p>
 
         <p>Спасибо за использование нашего Сервиса!</p>
         
