--- a/ru/about.html
+++ b/ru/about.html
@@ -12,13 +12,15 @@
     <!-- Основной контейнер для содержимого -->
     <div class="container">
         <h1>О нас</h1>
-        <p>Мы – LamirTech, IT-компания, специализирующаяся на разработке приложений для развлечений. Наша миссия – создавать уникальные цифровые продукты, которые увлекают, вдохновляют и приносят радость пользователям. Команда LamirTech объединяет опыт в технологиях и страсть к креативности, разрабатывая приложения, которые выделяются в индустрии и привлекают миллионы пользователей.</p>
+        <p>Мы — LamirTech, департамент ООО “Ветпрог”, специализирующийся на разработке приложений для развлечений на международном IT-рынке. Наша миссия — создавать уникальные цифровые продукты, которые увлекают, вдохновляют и приносят радость пользователям.</p>
         <p>Мы постоянно ищем новые идеи и инновационные решения, чтобы каждое наше приложение становилось еще более увлекательным и доступным. Независимо от масштаба проекта, мы стремимся к высокому качеству, интересным решениям и положительным эмоциям для наших пользователей.</p>
         <p>С LamirTech развлечение выходит на новый уровень!</p>
         
         <h2>Для связи</h2>
-        <p>Телефон: +7 (707) 943-96-67 (Казахстан)<br>
-        Почта: <a href="mailto:lamirtech@yandex.kz">lamirtech@yandex.kz</a></p>
+        <p>
+            Телефон: +7 (707) 943-96-67 (Казахстан)<br>
+            Почта: <a href="mailto:lamirtech@yandex.kz">lamirtech@yandex.kz</a> или <a href="mailto:help@lamirtech.su">help@lamirtech.su</a>
+        </p>
         
         <nav>
             <a href="privacy.html">Политика конфиденциальности</a> | <a href="../index.html">Вернуться на главную</a>
