some fixes in index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <!-- Основное содержимое -->
     <div class="container">
         <h1>LamirTech</h1>
+        
+        <!-- Новый абзац перед выбором языка -->
+        <p>ООО “Ветпрог” — департамент разработки на международный ИТ рынок: LamirTech / Vetprog LLC — Development Department for International IT Market: LamirTech</p>
+
         <p>Пожалуйста, выберите язык / Please select a language:</p>
         <div class="language-select">
             <a href="ru/about.html">Русский</a> | <a href="en/about.html">English</a>
