some fixes in index x2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <h1>LamirTech</h1>
         
         <!-- Новый абзац перед выбором языка -->
-        <p>ООО “Ветпрог” — департамент разработки на международный ИТ рынок: LamirTech / Vetprog LLC — Development Department for International IT Market: LamirTech</p>
+        <p>ООО “Ветпрог” — департамент разработки на международный ИТ рынок: LamirTech</p>
+		<p>Vetprog LLC — Development Department for International IT Market: LamirTech</p>
 
         <p>Пожалуйста, выберите язык / Please select a language:</p>
         <div class="language-select">
